--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
   "author": "Tianze",
   "license": "ISC",
   "dependencies": {
-    "glob": "^7.1.7"
+    "glob": "^7.1.7",
+    "koa": "^2.13.1",
+    "koa-mount": "^4.0.0"
   }
 }
