--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "glob": "^7.1.7",
     "koa": "^2.13.1",
-    "koa-mount": "^4.0.0"
+    "koa-mount": "^4.0.0",
+    "protocol-buffers": "^4.2.0"
   }
 }
